# Project-of-POP

./: .gitignore
Project1_ShoppingSystem/Project1_ShoppingSystem/: admin.cpp  base.h  customer.cpp  file.cpp  file.h  goods.cpp  goods.h  main.cpp  menu.cpp  menu.h  user1.txt  user2.txt  user3.txt  已售清单.txt  库存.txt  用户.txt
Project2_MySQL/: README
Project2_MySQL/MySQL/: A.txt  base.cpp  base.h  coursename.txt  create.cpp  create.h  delete.cpp  delete.h  drop.cpp  drop.h  insert.cpp  insert.h  main.cpp  makefile  mysql  mysql.cpp  mysql.h  operation.txt  select.cpp  select.h  student.txt  table.config  update.cpp  update.h
Project3_Reversi/: Project3_Reversi.sln
Project3_Reversi/Debug/: Project3_Reversi.ilk
Project3_Reversi/Project3_Reversi/: ClientSocket.cpp  ClientSocket.h  Define.h  Project3_Reversi.vcxproj  Project3_Reversi.vcxproj.filters  Reversi.cpp  Reversi.h  main.cpp  tool.cpp
Project3_Reversi/Project3_Reversi/Debug/: CL.read.1.tlog  CL.write.1.tlog  Project3_Reversi.lastbuildstate  Project3_Reversi_manifest.rc  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
Project4_MyCalculator/: CMakeLists.txt  calculator.h  equation.cpp  error.txt  main.cpp  makefile  my_complex.h  operate.cpp  precede.cpp  readme.txt  show.cpp  show.h  string_handle.cpp  string_to_oprand.cpp  variance.cpp
Project4_MyCalculator/source/: bodh_conversion.cpp  evaluate_expression.cpp  file_calc.cpp  hlog  main.cpp  operate.cpp  precede.cpp  show.cpp  tags
